# OEE

./: Data입수.drawio  README.md  all.drawio  cal.txt  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
Design/: 1_Requirement.md  2_2_DB_Schema_Design.html  2_3_Enrichment_and_Metrics.html  2_4_Store_and_ Forward.html  2_5_Algorithm_and_Resource.html  2_Detaileddesign.md  3_1_Edge_Module_Design.html  3_2_Edge_Compression_Module.html  3_3_Network_Transmission_Module.html  3_4_HQ_Integration_Module.html  3_System_Development.html  4_1_GlobalView.html  4_2_Integration_Integrity_Test.html  4_3_Performance_and_LoadTest.html  4_Aisualization_and_Validation.md
src/auto_st/: config.py  main.py  utils.py
src/scripts/: cli.py
tests/: test_main.py
