[metadata]
name = Auto_ST
version = 0.1.0
description = A Python project for Auto_ST
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/Auto_ST
license = MIT

[options]
packages = find:
install_requires =
    # List your project's dependencies here
    # e.g. requests
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    auto_st = auto_st.main:main

[tool:pytest]
testpaths = tests
